bs-mtls-service/grpc-mtls-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: bs-mtls-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bs-mtls-service
  template:
    metadata:
      labels:
        app: bs-mtls-service
    spec:
      containers:
      - name: bs-mtls-service
        image: ./bs-mtls-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
          name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: net-bs-mtls-service
spec:
  selector:
    app: bs-mtls-service
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
  type: NodePort
